Fix off-center spinning cogs
I just can't look at that wonky spinning anymore, end it

Didn't seem to break anything on a quick look, but I didn't look far

--- a/css/light.css
+++ b/css/light.css
@@ -1712,6 +1712,7 @@ pre,
 /* svg */
 .svg {
     height: 1em;
+    display: block;
 }
 svg.down {
     transition: transform 0.2s;
